--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1> hello world! </h1>
+    <h1> hello world!
+    my first page</h1>
   </body>
 </html>
