--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1> hello world!
-    my first page</h1>
-  </body>
+<!doctype html>
+
+<html>
+<head>
+<meta charset = "utf-8">
+</head>
+<title>
+My first body layout of html page.
+</title>
+<body>
+<p onclick = "alert('fu')" >Hello world my name is akshat sharma</p>
+<span>akshat</span>
+</body>
+
+
+
+
 </html>
