--- a/site/contentModel.html
+++ b/site/contentModel.html
@@ -1,16 +1,16 @@
 <!doctype html>
 
 <html>
-<head> <meta charset="utf-8"> </head>
+<head> <meta charset="utf-8">
 <title> block level and in line elements </title>
-
+</head>
 <body>
 
 <div>
 <div> First div tag </div>
 
 <span> first span tag
-  <span> nested first span tag </span>
+  <span> nested first span tag hello </span>
 </span>
 
 <div>Second div tag
