--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,8 @@ My first body layout of html page.
 <body>
 <p onclick = "alert('fu')" >Hello world my name is akshat sharma</p>
 <span>akshat</span>
+<br>
+<a href = "block and inline elements.html">Click Me! </a>
 </body>
 
 
