--- a/site/contentModel.html
+++ b/site/contentModel.html
@@ -5,8 +5,9 @@
 <title> block level and in line elements </title>
 </head>
 <body>
-
+<h1>Content Model</h1>
 <div>
+
 <div> First div tag </div>
 
 <span> first span tag
@@ -20,7 +21,7 @@
 
 
 </div>
-
+<a href = "semantictags.html">Click Me!</a>
 
 </body>
 </html>
