--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,9 @@ My first body layout of html page.
 <p onclick = "alert('fu')" >Hello world my name is akshat sharma</p>
 <span>akshat</span>
 <br>
-<a href = "block and inline elements.html">Click Me! </a>
+<a href = " contentModel.html">Click Me! </a>
+<br>
+
 </body>
 
 
