Some minor changes

--- a/site/firstCSS.html
+++ b/site/firstCSS.html
@@ -22,7 +22,7 @@ p{
 }
 #Imp{
   color : red;
-  
+
 }
 .new{
   color : green;
@@ -55,6 +55,8 @@ The advent of self-adhesive sheets preprinted with "Lorem ipsum" gave a more rea
 </p>
 </p>
 
+
+<a href = "psuedoClasses.html">Click Me</a>
 
 </body>
 
