--- a/site/psuedoClasses.html
+++ b/site/psuedoClasses.html
@@ -10,7 +10,8 @@
       margin-top:300px;
       margin-left:750px;
       margin-bottom:300px;
-      
+      background-image : url("newimage.jpg");
+
   }
   ul {
     list-style-type : none;
