--- a/site/image.html
+++ b/site/image.html
@@ -15,5 +15,6 @@
 <img src="https://i.pinimg.com/originals/6f/ff/6f/6fff6f3d80ab20cc0208c77c57036ccb.jpg" height = "480" width = "480" alt = " Another Image">
 </img>
 <div>Image of Tony Stark aka Iron Man </div>
+<a href = "firstCSS.html">Click Me</a>
 </body>
 </html>
