--- a/site/MediaQueries.html
+++ b/site/MediaQueries.html
@@ -4,6 +4,20 @@
     <meta charset = "utf-8">
     <title>Media Queries</title>
     <style>
+    button{
+      background-color : #87ceeb;
+      color : maroon;
+      text-align : center;
+      border : red 1px solid;
+      border-radius: 5px;
+      font-size: 20px;
+      cursor: pointer;
+
+    }
+    aside>a {
+      text-align: center;
+
+    }
       div{
         font-style : italic;
         font-family : cursive;
@@ -57,7 +71,12 @@
 <div>Media Queries</div>
 <p id = "p1"></p>
 <p id = "p2"></p>
-
+/*<aside>
+<a href = "responsiveLayout.html">
+  <div>
+    <button > Click Me!</button>
+    </div>
+</aside>*/
 
 </body>
 </html>
