--- a/site/MediaQueries.html
+++ b/site/MediaQueries.html
@@ -71,12 +71,12 @@
 <div>Media Queries</div>
 <p id = "p1"></p>
 <p id = "p2"></p>
-/*<aside>
-<a href = "responsiveLayout.html">
+<aside>
+<a href = "dummyBootstrap.html">
   <div>
     <button > Click Me!</button>
     </div>
-</aside>*/
+</aside>
 
 </body>
 </html>
