--- a/site/dummyBootstrap.html
+++ b/site/dummyBootstrap.html
@@ -2,17 +2,39 @@
 <html lang="em">
 <head>
 <meta charset="utf-8">
-<meta name  = "viewport" content = "width = device-width , initial scale 1">
+<meta name  = "viewport" content = "width = device-width , initial scale = 1">
 <title>Bootstrap</title>
 <link rel="stylesheet" href = "css\bootstrap.min.css">
+<style>
+  button{
+    background-color : #87ceeb;
+    color : maroon;
+    text-align : center;
+    border : red 1px solid;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+
+  }
+  aside>a {
+    text-align: center;
+
+  }
+  </style>
 </head>
 <body>
-  <h2>Hello Coursera my name is akshat sharma</h2>
+  <h2>Hello Coursera my name is akshat sharma good morning</h2>
 <script src = "jquery-3.5.1.min.js">
 </script>
 <script src = "js\bootstrap.mim.js">
 </script>
 
+<aside>
+<a href = "gridSystem.html">
+  <div>
+    <button > Click Me!</button>
+    </div>
+</aside>
 
 
 
