--- a/site/gridSystem.html
+++ b/site/gridSystem.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name = "viewport" content = "width = device=width , initial-scale = 1">
 <title>Grid System</title>
-<link rel = "stylesheet" href = "css\bootstrap-grid.min.css">
+<link rel = "stylesheet" href = "css\bootstrap.min.css">
 <style>
   *{
     box-sizing = border-box;
@@ -12,6 +12,7 @@
   p{
     background-color : green;
     height : 100px;
+    margin-top : 30px;
 
   }
 </style>
@@ -21,16 +22,16 @@
 </head>
 
 
-<header class = "container">
+<header class = "container-fluid">
   <nav class = "row">
-    <div class = "col-md-2 col-lg-6"><p>Item 1</p></div>
-    <div class = "col-md-2 col-lg-6"><p>Item 2</p></div>
-    <div class = "col-md-2 col-lg-6"><p>Item 3</p></div>
-    <div class = "col-md-2 col-lg-6"><p>Item 4</p></div>
-    <div class = "col-md-2 col-lg-6"><p>Item 5</p></div>
-    <div class = "col-md-2 col-lg-6"><p>Item 6</p></div>
-    <div class = "col-md-2 col-lg-6"><p>Item 7</p></div>
-    <div class = "col-md-2 col-lg-6"><p>Item 8</p></div>
+    <div class = "col-md-4 col-sm-6 col-xs-12 col-lg-2"><p>Item 1</p></div>
+    <div class = "col-md-4 col-sm-6 col-xs-12 col-lg-2"><p>Item 2</p></div>
+    <div class = "col-md-4 col-sm-6 col-xs-12 col-lg-2"><p>Item 3</p></div>
+    <div class = "col-md-4 col-sm-6 col-xs-12 col-lg-2"><p>Item 4</p></div>
+    <div class = "col-md-4 col-sm-6 col-xs-12 col-lg-2"><p>Item 5</p></div>
+    <div class = "col-md-4 col-sm-6 col-xs-12 col-lg-2"><p>Item 6</p></div>
+    <div class = "col-md-4 col-sm-6 col-xs-12 col-lg-2"><p>Item 8</p></div>
+    <div class = "col-md-4 col-sm-6 col-xs-12 col-lg-2"><p>Item 7</p></div>
 
   </nav>
 </header>
