--- a/site/myHerupa/index.html
+++ b/site/myHerupa/index.html
@@ -32,13 +32,13 @@
 </header>
 
 <div class = "row" id ="secondrow">
-  <div class = "col-lg-12 col-md-12 col-sm-12" id = "firstcontent"><a href="https://myherupa.com/pages/gpa.html"><h4>GPA Calculator</h4></a><span>Just enter your grades, we give you your GPA Simple.</span></div>
-  <div class = "col-lg-12 col-md-12 col-sm-12" id = "secondcontent"><a href="https://myherupa.com/pages/time-table.html"><h4>myTimeTable</h4></a><span>The most intuitive and amazing time-table for you.</span></div>
+  <div class = "col-lg-12 col-md-12 col-sm-12" id = "firstcontent"><a href="https://myherupa.com/pages/gpa.html"><h4>GPA Calculator</h4><span>Just enter your grades, we give you your GPA Simple.</span></a></div>
+  <div class = "col-lg-12 col-md-12 col-sm-12" id = "secondcontent"><a href="https://myherupa.com/pages/time-table.html"><h4>myTimeTable</h4><span>The most intuitive and amazing time-table for you.</span></a></div>
   <div class = "col-lg-4 col-md-4 col-sm-4" id = "thirdcontent"><a href="https://drive.google.com/file/d/1NZLMKmbKw_S0W0MKPcbpGS9RUSddqBNl/view"><h4>Academic Calender</h4></a></div>
   <div class = "col-lg-4 col-md-4 col-sm-4" id = "fourthcontent"><a href="https://myherupa.com/pages/wifi.html"><h4>WiFi&passwords</h4></a></div>
   <div class = "col-lg-4 col-md-4 col-sm-4" id = "fifthcontent"><a href="https://drive.google.com/file/d/1IrTFyWEsGBiRxkKnN2l4Fr9Nnp_hqJmA/view"><h4>Holiday Calender</h4></a></div>
-  <div class = "col-lg-6 col-md-6 col-sm-6" id = "sixthcontent"><a href="https://myherupa.com/pages/societies.html"><h4>Society&Fests</h4></a><span>All socities from Thapar Institute of Engineering and Technology right at one place.</span></div>
-  <div class = "col-lg-6 col-md-6 col-sm-6" id = "seventhcontent"><a href="https://myherupa.com/pages/food.html"><h4>Food&Restros</h4></a><span>From getting tipsy to getting sober, grabbing a bite to having a meal. We got you all covered.</span></div>
+  <div class = "col-lg-6 col-md-6 col-sm-6" id = "sixthcontent"><a href="https://myherupa.com/pages/societies.html"><h4>Society&Fests</h4><span>All socities from Thapar Institute of Engineering and Technology right at one place.</span></a></div>
+  <div class = "col-lg-6 col-md-6 col-sm-6" id = "seventhcontent"><a href="https://myherupa.com/pages/food.html"><h4>Food&Restros</h4><span>From getting tipsy to getting sober, grabbing a bite to having a meal. We got you all covered.</span></a></div>
 </div>
 
 </div>
