--- a/site/myHerupa/index.html
+++ b/site/myHerupa/index.html
@@ -17,11 +17,11 @@
 <header class = "divHeader">
 <h1>myHerupa</h1>
 <h3>For all your academic needs.</h3>
-<nav>Check out what new material has been added recently <a href = "">here</a>
+<nav>Check out what new material has been added recently <a href = "">here</a></nav>
 <div class = "row" id ="firstrow">
-<span class = "col-lg-4 col-md-6 col-sm-12" id ="first">First Year</span>
-<span class = "col-lg-4 col-md-6 col-sm-12" id = "second">Second Year</span>
-<span class = "col-lg-4 col-md-6 col-sm-12" id ="third">Third Year</span>
+<div class = "col-lg-4 col-md-6 col-sm-12" id ="first">First Year</div>
+<div class = "col-lg-4 col-md-6 col-sm-12" id = "second">Second Year</div>
+<div class = "col-lg-4 col-md-6 col-sm-12" id ="third">Third Year</div>
 
 </div>
 </header>
