--- a/site/myHerupa/index.html
+++ b/site/myHerupa/index.html
@@ -8,14 +8,14 @@
 <link rel = "stylesheet" href = "myHerupa.css"></link>
 <title>myHerupa</title>
 </head>
-<body style = "font size : 8vw;">
+<body >
 <header>
 <div id = "left"><a href = "https://web.whatsapp.com/" target = "_blank"><img src = "images/whatsapp.PNG"></img></a></div>
 
 </header>
 <div class = "container">
 <header class = "divHeader">
-<h1  >myHerupa</h1>
+<h1  style = "font-size : 13vw;">myHerupa</h1>
 <h3>For all your academic needs.</h3>
 <nav>Check out what new material has been added recently <a href = "">here</a></nav>
 <div class = "row" id ="firstrow">
@@ -27,7 +27,7 @@
 </header>
 <div id = "indicator"><span  >Scroll Down</span></div>
 <header id = "new">
-<h1  >More Stuff</h1>
+<h1 style = "font-size : 10vw;" >More Stuff</h1>
 <span>Additional stuff that we really could not put anywhere else.</span>
 </header>
 
