--- a/site/myHerupa/index.html
+++ b/site/myHerupa/index.html
@@ -13,7 +13,7 @@
 <div id = "left"><a href = "https://web.whatsapp.com/" target = "_blank"><img src = "images/whatsapp.PNG"></img></a></div>
 
 </header>
-<div class = "container">
+<div class = "container-fluid">
 <header class = "divHeader">
 <h1  style = "font-size : 13vw;">myHerupa</h1>
 <h3>For all your academic needs.</h3>
